# check-nextcloud-security

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  check_nextcloud_security.py  mypy.ini  noxfile.py  pyproject.toml  pyvenv.cfg  requirements.txt
.github/workflows/: bandit.yml  run-mypy-check.yml  run-python-version-test.yml  run-ruff-check.yml  run-tests.yml
ansible/: .ansible-lint  README.md  ansible.cfg  inventory.example.ini  requirements.yml
ansible/group_vars/: all.yml
ansible/playbooks/: deploy_docker.yml  deploy_native.yml
ansible/roles/nextcloud_check_docker/defaults/: main.yml
ansible/roles/nextcloud_check_docker/handlers/: main.yml
ansible/roles/nextcloud_check_docker/meta/: main.yml
ansible/roles/nextcloud_check_docker/tasks/: main.yml
ansible/roles/nextcloud_check_docker/templates/: checkcommand.conf.j2  service.conf.j2
ansible/roles/nextcloud_check_native/defaults/: main.yml
ansible/roles/nextcloud_check_native/handlers/: main.yml
ansible/roles/nextcloud_check_native/meta/: main.yml
ansible/roles/nextcloud_check_native/tasks/: main.yml
ansible/roles/nextcloud_check_native/templates/: checkcommand.conf.j2  service.conf.j2
contrib/: README.md
contrib/cron/: check-nextcloud-security.cron
contrib/systemd/: check-nextcloud-security.env.example  check-nextcloud-security.service  check-nextcloud-security.timer
src/: check_nextcloud_security.py  check_nextcloud_security.py~
tests/: conftest.py  test_check_if_ip_or_host.py  test_check_vulnerabilities.py  test_env_config.py  test_main.py  test_nagios_exit_code.py  test_perfdata.py  test_retry_backoff.py  test_send_scan_request.py
